--- a/pyrite.info.yml
+++ b/pyrite.info.yml
@@ -2,3 +2,4 @@ name: Pyrite Spam Mitigation
 type: module
 description: A suite of anti-spam measures
 core: 8.x
+core_version_requirement: ^8 || ^9
