--- a/pyrite.info.yml
+++ b/pyrite.info.yml
@@ -1,5 +1,5 @@
 name: Pyrite Spam Mitigation
 type: module
-description: A suite of anti-spam measures for webforms
+description: A suite of anti-spam measures for webforms X
 core: 8.x
 core_version_requirement: ^8 || ^9
