add D11 to info file

--- a/pyrite.info.yml
+++ b/pyrite.info.yml
@@ -2,4 +2,4 @@ name: Pyrite Spam Mitigation
 type: module
 description: A suite of anti-spam measures for webforms X
 core: 8.x
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^8 || ^9 || ^10 || ^11
